Refactored the project structure to work with coffeescript.  At this point the project should build fine when we run the build

--- a/app/styles/includes/css/styles.css
+++ b/app/styles/includes/css/styles.css
@@ -89,15 +89,15 @@ ul.unstyled {
 #myCarousel .item { height: 400px; }
 
 #slide1 {
-	background: url('../../images/carousel_medium_01.jpg') top center no-repeat;
+	background: url('../images/carousel_medium_01.jpg') top center no-repeat;
 }
 
 #slide2 {
-	background: url('../../images/carousel_medium_02.jpg') top center no-repeat;
+	background: url('../images/carousel_medium_02.jpg') top center no-repeat;
 }
 
 #slide3 {
-	background: url('../../images/carousel_medium_03.jpg') top center no-repeat;
+	background: url('../images/carousel_medium_03.jpg') top center no-repeat;
 }
 
 
@@ -173,15 +173,15 @@ ul.unstyled {
 	#myCarousel .item { height: 310px; }
 	
 	#slide1 {
-		background: url('../../images/carousel_small_01.jpg') top center no-repeat;
+		background: url('../images/carousel_small_01.jpg') top center no-repeat;
 	}
 	
 	#slide2 {
-		background: url('../../images/carousel_small_02.jpg') top center no-repeat;
+		background: url('../images/carousel_small_02.jpg') top center no-repeat;
 	}
 	
 	#slide3 {
-		background: url('../../images/carousel_small_03.jpg') top center no-repeat;
+		background: url('../images/carousel_small_03.jpg') top center no-repeat;
 	}
 	
 	.carousel-caption {
@@ -200,15 +200,15 @@ ul.unstyled {
 	#myCarousel .item { height: 500px; }
 	
 	#slide1 {
-		background: url('../../images/carousel_large_01.jpg') top center no-repeat;
+		background: url('../images/carousel_large_01.jpg') top center no-repeat;
 	}
 	
 	#slide2 {
-		background: url('../../images/carousel_large_02.jpg') top center no-repeat;
+		background: url('../images/carousel_large_02.jpg') top center no-repeat;
 	}
 	
 	#slide3 {
-		background: url('../../images/carousel_large_03.jpg') top center no-repeat;
+		background: url('../images/carousel_large_03.jpg') top center no-repeat;
 	}
 
 }
