--- a/app/views/main.html
+++ b/app/views/main.html
@@ -12,7 +12,7 @@
         <div class="item active" id="slide1">
             <div class="carousel-caption">
                 <h4>#1 Signup for Rokuman 1</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis purus sit amet eros accumsan viverra a in libero. Pellentesque fermentum elementum orci ac elementum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur elit. Nullam quis purus sit amet eros accumsan viverra a in libero. Pellentesque fermentum elementum orci ac elementum.</p>
             </div><!-- end carousel-caption-->
         </div><!-- end item -->
 
