--- a/app/views/main.html
+++ b/app/views/main.html
@@ -58,7 +58,8 @@
                 <h1>A Fancy Rokuman <small>A Rokuman for extra awesome.</small></h1>
             </div><!-- end page-header -->
 
-            <p class="lead"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis purus sit amet eros accumsan viverra a in libero. Pellentesque fermentum elementum orci ac elementum.</p>
+            <p class="lead"> Lorem ipsum dolor sit amet, adipiscing elit. Nullam quis purus sit amet eros accumsan
+                viverra a in libero. Pellentesque fermentum elementum orci ac elementum.</p>
 
             <a href="" class="btn btn-large btn-primary" id="alertMe">Click Here to Signup</a>
             <a href="" class="btn btn-large btn-link">or a secondary link</a>
